# Algorithmics

./: .gitignore  CMakeLists.txt
boletin1/: main.c
boletin1/data/: films.csv
boletin1/docs/html/: _film_8c.html  _film_8h.html  _film_8h_source.html  _hash_table_8c.html  _hash_table_8h.html  _hash_table_8h_source.html  annotated.html  classes.html  dir_29820b7a411ae225b5b4a0807a379a47.html  dir_b103a43e35c4c38bede8332e621f25d9.html  dir_c0c0640ef96d200d26e92c27a23705d3.html  dir_fc8d99d67f3363a08ac9075071532588.html  dir_fd4d96c3073293ef25b463a8b2ba7d0d.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.hhc  index.hhk  index.hhp  index.html  main_8c.html  menudata.js  structfilm.html  structhashitem.html
boletin1/function/: Film.c  HashTable.c
boletin1/model/: Film.h  HashTable.h
boletin2/: main.c
boletin2/data/: canciones.txt
boletin2/docs/html/: _exercise1_8c.html  _exercise1_8h.html  _exercise1_8h_source.html  _exercise2_8c.html  _exercise2_8h.html  _exercise2_8h_source.html  annotated.html  index.hhc  (+18 more)
boletin2/function/: Exercise1.c  Exercise2.c
boletin2/model/: Exercise1.h  Exercise2.h
boletin3/: main.c
boletin3/data/: numeros10.txt
boletin3/function/: BubbleSort.c  Common.c  QuickSort.c  SelectionSort.c  ShellSort.c
boletin3/model/: BubbleSort.h  Common.h  QuickSort.h  SelectionSort.h  ShellSort.h
boletin4/: main.c
boletin4/data/: textobusq.txt
boletin4/function/: Common.c  DirectSearch.c  bm.c  kmp.c
boletin4/model/: Common.h  DirectSearch.h  bm.h  kmp.h
(+56 files in other folders)
